--- a/detail.html
+++ b/detail.html
@@ -10,9 +10,9 @@
 <body>
   <nav>
     <div class="logo">
-      <img src="/assets/icon.jpg" style="width: 50px; height: 50px; border: 2px solid black;">
+      <img src="./assets/icon.jpg" style="width: 50px; height: 50px; border: 2px solid black;">
         <h1>Detail Pokémon</h1>
-      <a href="index.html"><img src="/assets/icon-kembali.png" style="width: 50px; height: 50px; border: 2px solid black; margin-left: 850px;"></a>
+      <a href="index.html"><img src="./assets/icon-kembali.png" style="width: 50px; height: 50px; border: 2px solid black; margin-left: 850px;"></a>
     </div>
   </nav>
   <hr>
