--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daftar Pokémon</title>
   <link rel="stylesheet" href="src/styles/style.css">
-  <link rel="icon" href="/assets/icon.jpg">
+  <link rel="icon" href="./assets/icon.jpg">
 </head>
 <body>
   <nav>
     <div class="logo">
-      <img src="/assets/icon.jpg" style="width: 50px; height: 50px; border: 2px solid black;">
+      <img src="./assets/icon.jpg" style="width: 50px; height: 50px; border: 2px solid black;">
       <h2>Pokemon List</h2>
     </div>
   </nav>
