--- a/detail.html
+++ b/detail.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detail Pokémon</title>
   <link rel="stylesheet" href="src/styles/style.css">
-  <link rel="icon" href="/assets/icon.jpg">
+  <link rel="icon" href="/assets/images/icon.jpg">
 </head>
 <body>
   <nav>
     <div class="logo">
-      <img src="./assets/icon.jpg" style="width: 50px; height: 50px; border: 2px solid black;">
+      <img src="/assets/images/icon.jpg" style="width: 50px; height: 50px; border: 2px solid black;">
         <h1>Detail Pokémon</h1>
-      <a href="index.html"><img src="./assets/icon-kembali.png" style="width: 50px; height: 50px; border: 2px solid black; margin-left: 850px;"></a>
+      <a href="index.html"><img src="/assets/images/icon-kembali.png" style="width: 50px; height: 50px; border: 2px solid black; margin-left: 850px;"></a>
     </div>
   </nav>
   <hr>
