--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daftar Pokémon</title>
   <link rel="stylesheet" href="src/styles/style.css">
-  <link rel="icon" href="/assets/images/icon.jpg">
+  <link rel="icon" href="./assets/images/icon.jpg">
 </head>
 <body>
   <nav>
     <div class="logo">
-      <img src="/assets/images/icon.jpg" style="width: 50px; height: 50px; border: 2px solid black;">
+      <img src="./assets/images/icon.jpg" style="width: 50px; height: 50px; border: 2px solid black;">
       <h2>Pokemon List</h2>
     </div>
   </nav>
   <hr>
   <header>
-    <img src="/assets/images/icon.jpg" alt="Logo Pokémon" style="width: 200px; height: 200px; border: 2px solid black; border-radius: 50%; margin-top: 10px;">
+    <img src="./assets/images/icon.jpg" alt="Logo Pokémon" style="width: 200px; height: 200px; border: 2px solid black; border-radius: 50%; margin-top: 10px;">
     <h1 align="center">Daftar Pokémon</h1>
     <h3 align="center">Ini Adalah Website Atau Landing Page Yang Menggunakan API Pokemon</h3>
   </header>
